--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,40 @@
 /log/*
 !/log/.keep
 /tmp
+/.bundle
+/vendor/bundle/
+/vendor/ruby/
+
+
+db/*.mysql2','~> 0.3.18
+/db/*.mysql2','~> 0.3.18-journal
+/log/*
+/tmp/*
+
+
+**.war
+*.rbc
+*.sassc
+.redcar/
+.sass-cache
+/config/config.yml
+/config/database.yml
+/coverage.data
+/coverage/
+/db/*.javadb/
+/db/*.sqlite3
+/doc/api/
+/doc/app/
+/doc/features.html
+/doc/specs.html
+/public/cache
+/public/stylesheets/compiled
+/public/system/*
+/spec/tmp/*
+/cache
+/capybara*
+/capybara-*.html
+/gems
+/specifications
+rerun.txt
+pickle-email-*.html
