--- a/config/database.yml
+++ b/config/database.yml
@@ -10,23 +10,35 @@
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 #
 default: &default
-  adapter: mysql2
-  encoding: utf8
+  adapter: postgresql 
+  encoding: unicode
   pool: 5
-  username: root
+  username: gabriel
   password: gabriel84
   socket: /var/run/mysqld/mysqld.sock
 
 development:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
   database: filmstore_development
-
+  pool: 5
+  username: gabriel
+  pasword: gabriel84
+  
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+
+ 
 test:
-  <<: *default
+  <<: *default 
+  adapter: postgresql
+  encoding: unicode
   database: filmstore_test
+  database: filmstore_development
+  pool: 5
+  username: gabriel
+  pasword: gabriel84
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -47,8 +59,12 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
+
+#  <<: *default
 production:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
   database: filmstore_production
-  username: filmstore
+  pool: 5
+  username: gabriel
   password: <%= ENV['FILMSTORE_DATABASE_PASSWORD'] %>
