--- a/config/database.yml
+++ b/config/database.yml
@@ -13,6 +13,7 @@ default: &default
   adapter: postgresql 
   encoding: unicode
   pool: 5
+ # host: localhost
   username: gabriel
   password: gabriel84
   socket: /var/run/mysqld/mysqld.sock
@@ -22,6 +23,7 @@ development:
   encoding: unicode
   database: filmstore_development
   pool: 5
+ # host: localhost
   username: gabriel
   pasword: gabriel84
   
@@ -37,6 +39,7 @@ test:
   database: filmstore_test
   database: filmstore_development
   pool: 5
+ # host: localhost
   username: gabriel
   pasword: gabriel84
 
@@ -65,6 +68,7 @@ production:
   adapter: postgresql
   encoding: unicode
   database: filmstore_production
+  host: localhost
   pool: 5
   username: gabriel
   password: <%= ENV['FILMSTORE_DATABASE_PASSWORD'] %>
