--- a/config/database.yml
+++ b/config/database.yml
@@ -10,38 +10,24 @@
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 #
 default: &default
-  adapter: postgresql 
-  encoding: unicode
+  adapter: mysql2 
+  encoding: utf8
   pool: 5
- # host: localhost
-  username: gabriel
+  host: localhost
+  username: root
   password: gabriel84
   socket: /var/run/mysqld/mysqld.sock
 
 development:
-  adapter: postgresql
-  encoding: unicode
+  <<: *default
   database: filmstore_development
-  pool: 5
- # host: localhost
-  username: gabriel
-  pasword: gabriel84
-  
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-
- 
 test:
-  <<: *default 
-  adapter: postgresql
-  encoding: unicode
+  <<: *default
   database: filmstore_test
-  database: filmstore_development
-  pool: 5
- # host: localhost
-  username: gabriel
-  pasword: gabriel84
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -62,13 +48,8 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
-
-#  <<: *default
 production:
-  adapter: postgresql
-  encoding: unicode
+  <<: *default
   database: filmstore_production
-  host: localhost
-  pool: 5
-  username: gabriel
+  username: root
   password: <%= ENV['FILMSTORE_DATABASE_PASSWORD'] %>
